<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_info"><u>Activity Info</u></string>
    <string name="agree">User Agreement</string>
    <string name="agree_permission">Please agree to the permission application first.</string>
    <string name="alert">Alert</string>
    <string name="app_name">Dragon Adventure idle</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="check_network">Network Error.Please check your Network connectivity.</string>
    <string name="check_update">Check Update…</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_quit_game">Confirm Exit Game?</string>
    <string name="decompressing">Decompressing…</string>
    <string name="facebook_app_id">563635417808635</string>
    <string name="fb_login_protocol_scheme">fb563635417808635</string>
    <string name="game_view_content_description">Game view</string>
    <string name="grant_permission">We need the permissions to upgrade game,grant again?</string>
    <string name="hw_94hi_clause_content">我已閱讀並同意會員條款與個人資料暨隱私權政策</string>
    <string name="hw_94hi_forget_password">忘記密碼</string>
    <string name="hw_94hi_register">免費註冊</string>
    <string name="hw_account">Account</string>
    <string name="hw_accountCenter_94hi">94Hi</string>
    <string name="hw_accountCenter_account_balance">Balance:</string>
    <string name="hw_accountCenter_account_name">Username:</string>
    <string name="hw_accountCenter_bind">Connect</string>
    <string name="hw_accountCenter_bind_ed">Connected</string>
    <string name="hw_accountCenter_cdkey_btn_copy">Copy</string>
    <string name="hw_accountCenter_cdkey_btn_ok">Ok</string>
    <string name="hw_accountCenter_cdkey_content">"
Migration code:
"</string>
    <string name="hw_accountCenter_cdkey_username_content">Account ID:</string>
    <string name="hw_accountCenter_changePassword">Change Password</string>
    <string name="hw_accountCenter_copy_failed">copy failed</string>
    <string name="hw_accountCenter_copy_success">copy success</string>
    <string name="hw_accountCenter_custome_link">pay</string>
    <string name="hw_accountCenter_customer_service">Customer service</string>
    <string name="hw_accountCenter_email">Email</string>
    <string name="hw_accountCenter_email_band">Your email has been connected to another game account. Please check and try again.</string>
    <string name="hw_accountCenter_fb">Facebook</string>
    <string name="hw_accountCenter_fb_band">Your Facebook has been connected to other account. Please check and try again.</string>
    <string name="hw_accountCenter_fb_community">Facebook Community</string>
    <string name="hw_accountCenter_getCdKey">获取迁移码</string>
    <string name="hw_accountCenter_google_band">Your Google+ has been connected to other game account. Please check.</string>
    <string name="hw_accountCenter_gpplus">Google</string>
    <string name="hw_accountCenter_line">Line</string>
    <string name="hw_accountCenter_line_band">Your Line has been connected to other game account. Please check and try again.</string>
    <string name="hw_accountCenter_logoutAccount">Log Out</string>
    <string name="hw_accountCenter_msg_bindOther">Account will be insecure after disconnection. Please connect with a platform for security reasons.</string>
    <string name="hw_accountCenter_msg_isUnbind">By doing this, you will no longer be able to login to the game with this account. Continue?</string>
    <string name="hw_accountCenter_msg_logout">Guest account cannot be retrieved after deletion. Continue?</string>
    <string name="hw_accountCenter_naver">Naver</string>
    <string name="hw_accountCenter_naver_band">Your Naver has been connected to other game account. Please check and try again.</string>
    <string name="hw_accountCenter_notice">Guest account cannot be retrieved. Please register.</string>
    <string name="hw_changePassword_newPassword">New</string>
    <string name="hw_changePassword_newPassword_hint">new password</string>
    <string name="hw_changePassword_oldPassword">Current</string>
    <string name="hw_changePassword_oldPassword_hint">old password</string>
    <string name="hw_changePassword_submit">Confirm</string>
    <string name="hw_changePassword_title">Change Password</string>
    <string name="hw_des_back">back</string>
    <string name="hw_des_email">email</string>
    <string name="hw_des_exit">exit</string>
    <string name="hw_des_facebook">facebook</string>
    <string name="hw_des_google">google</string>
    <string name="hw_des_line">line</string>
    <string name="hw_gameTips_continue">Continue</string>
    <string name="hw_gameTips_des">You are playing in the guest mode. If you delete the app or switch devices, you will lose your game progress. Please connect your account.</string>
    <string name="hw_gameTips_ignoreIt">Ignore</string>
    <string name="hw_gameTips_register">Connect</string>
    <string name="hw_gameTips_title">Notification</string>
    <string name="hw_inputBox_validationCode_hint">Verification Code</string>
    <string name="hw_login_by_email">Sign in with Email</string>
    <string name="hw_login_by_facebook">Sign in with Facebook</string>
    <string name="hw_login_by_google">Sign in with Google</string>
    <string name="hw_login_by_guest_text">游客登陆 >></string>
    <string name="hw_login_by_line">Sign in with Line</string>
    <string name="hw_login_by_twittwer">Sign in with Twitter</string>
    <string name="hw_login_title">Login</string>
    <string name="hw_msg_email_code">Sending</string>
    <string name="hw_register_agree">Agree to User Agreement</string>
    <string name="hw_register_signUp">Submit</string>
    <string name="hw_register_title">Register</string>
    <string name="hw_update_current_version">Current Version:</string>
    <string name="hw_update_des">New version detected. Update now?</string>
    <string name="hw_update_later">Later</string>
    <string name="hw_update_new_version">Latest Version:</string>
    <string name="hw_update_title">Update</string>
    <string name="hw_update_update_now">Update</string>
</resources>