<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:background="@drawable/hw_login_bg" android:layout_width="@dimen/hw_dialog_width" android:layout_height="wrap_content" android:layout_margin="@dimen/hw_dialog_marginParent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:id="@id/iv_login_logo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:layout_marginBottom="10.0dip">
                <requestFocus />
            </ImageView>
            <TextView android:textSize="@dimen/hw_dialog_title_textSize" android:textColor="@color/hw_dialog_title_textColor" android:layout_gravity="center" android:id="@id/tv_title" android:focusable="true" android:focusableInTouchMode="true" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_dialog_title_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_title_margin_topBottom" android:text="@string/hw_login_title">
                <requestFocus />
            </TextView>
        </LinearLayout>
        <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/hw_dialog_margin_leftRight" android:layout_marginRight="@dimen/hw_dialog_margin_leftRight" android:layout_marginBottom="@dimen/hw_dialog_margin_topBottom">
                <LinearLayout android:id="@id/ll_line" android:background="@color/hw_base_dialog_background" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height">
                    <ImageView android:layout_gravity="center" android:id="@id/iv_line" android:layout_width="20.0dip" android:layout_height="fill_parent" android:layout_marginLeft="25.0dip" android:src="@drawable/line_icon" android:contentDescription="@string/hw_des_line" />
                    <TextView android:textStyle="bold" android:textColor="@color/hw_black" android:gravity="center" android:id="@id/tv_line" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hw_login_by_line" />
                </LinearLayout>
                <LinearLayout android:id="@id/ll_facebook" android:background="@color/hw_base_dialog_background" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="12.0dip">
                    <ImageView android:layout_gravity="center" android:id="@id/iv_facebook" android:layout_width="10.0dip" android:layout_height="fill_parent" android:layout_marginLeft="30.0dip" android:src="@drawable/facebook_icon" android:contentDescription="@string/hw_des_facebook" />
                    <TextView android:textStyle="bold" android:textColor="@color/hw_black" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tv_facebook" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:text="@string/hw_login_by_facebook" />
                </LinearLayout>
                <LinearLayout android:id="@id/ll_twitter" android:background="@color/hw_base_dialog_background" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="12.0dip">
                    <ImageView android:layout_gravity="center" android:id="@id/iv_twitter" android:layout_width="20.0dip" android:layout_height="fill_parent" android:layout_marginLeft="25.0dip" android:src="@drawable/hw_twitter_login" android:contentDescription="@string/hw_des_email" />
                    <TextView android:textStyle="bold" android:textColor="@color/hw_black" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tv_twitter" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hw_login_by_twittwer" />
                </LinearLayout>
                <LinearLayout android:id="@id/ll_email" android:background="@color/hw_base_dialog_background" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="12.0dip">
                    <ImageView android:layout_gravity="center" android:id="@id/iv_email" android:layout_width="20.0dip" android:layout_height="fill_parent" android:layout_marginLeft="25.0dip" android:src="@drawable/email_icon" android:contentDescription="@string/hw_des_email" />
                    <TextView android:textStyle="bold" android:textColor="@color/hw_black" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tv_email" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hw_login_by_email" />
                </LinearLayout>
                <LinearLayout android:id="@id/ll_google" android:background="@color/hw_base_dialog_background" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="12.0dip">
                    <ImageView android:layout_gravity="center" android:id="@id/iv_google_login" android:layout_width="20.0dip" android:layout_height="fill_parent" android:layout_marginLeft="25.0dip" android:src="@drawable/google_icon" android:contentDescription="@string/hw_des_google" />
                    <TextView android:textStyle="bold" android:textColor="@color/hw_black" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/tv_google_login" android:clickable="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hw_login_by_google" />
                </LinearLayout>
                <TextView android:textColor="@color/hw_white" android:id="@id/tv_guest_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/hw_login_by_guest_text" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <FrameLayout android:layout_gravity="end" android:id="@id/fl_exit" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/hw_exitButton_size" android:layout_height="@dimen/hw_exitButton_size">
        <ImageView android:layout_gravity="center" android:background="@drawable/hw_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_exit" />
    </FrameLayout>
</FrameLayout>