<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:id="@id/qg_view_regist_content" android:background="@drawable/bg_register_hw" android:layout_width="@dimen/hw_dialog_width" android:layout_height="wrap_content" android:layout_margin="@dimen/hw_dialog_marginParent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/hw_dialog_margin_leftRight" android:layout_marginRight="@dimen/hw_dialog_margin_leftRight">
        <TextView android:textSize="@dimen/hw_dialog_title_textSize" android:textColor="@color/hw_dialog_title_textColor" android:layout_gravity="center" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_dialog_title_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_title_margin_topBottom" android:text="@string/hw_register_title" />
        <include android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/hw_view_register_email_with_password_a" />
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_code" android:padding="@dimen/hw_inputBox_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/hw_inputBox_height">
            <EditText android:textSize="@dimen/hw_inputBox_textSize" android:textColor="@color/hw_dialog_content_textColor" android:textColorHint="@color/hw_inputBox_hint_textColor" android:id="@id/et_code" android:background="@drawable/et_underline_selector" android:paddingLeft="@dimen/hw_inputBox_editView_padding" android:paddingRight="@dimen/hw_inputBox_editView_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/hw_inputBox_validationCode_hint" android:ems="20" android:layout_weight="1.0" android:inputType="textEmailAddress" android:imeOptions="actionNext" android:nextFocusForward="@id/et_password" />
            <TextView android:textColor="@color/hw_dialog_content_textColor_a" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_code_resend" android:background="@drawable/hw_button_send_bg_selector" android:clickable="true" android:layout_width="@dimen/hw_resendButton_width" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:text="@string/hw_msg_email_code" />
        </LinearLayout>
        <CheckBox android:textSize="@dimen/hw_dialog_des_textSize" android:textColor="@color/hw_dialog_content_textColor" android:id="@id/cb_agree" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/hw_login_register_agree_margin" android:checked="false" android:button="@drawable/hw_checkbox_button" android:text="@string/hw_register_agree" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="@color/hw_dialog_content_textColor_a" android:gravity="center" android:id="@id/tv_signUp" android:background="@drawable/hw_button_coloured_bg_selector" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginTop="@dimen/hw_dialog_button_margin_topBottom" android:layout_marginBottom="@dimen/hw_dialog_button_margin_topBottom" android:text="@string/hw_register_signUp" />
        <TextView android:textSize="@dimen/hw_dialog_des_textSize" android:textColor="@color/hw_dialog_content_textColor_b" android:id="@id/tv_user_agreement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginBottom="10.0dip" android:text="@string/agree" />
    </LinearLayout>
    <FrameLayout android:layout_gravity="end" android:id="@id/fl_exit" android:clickable="true" android:layout_width="@dimen/hw_exitButton_size" android:layout_height="@dimen/hw_exitButton_size">
        <ImageView android:layout_gravity="center" android:background="@drawable/hw_close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_exit" />
    </FrameLayout>
</FrameLayout>