<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/hw_activity_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_gravity="center" android:background="@color/hw_header_bg" android:layout_width="fill_parent" android:layout_height="@dimen/hw_header_height">
        <TextView android:textSize="@dimen/hw_header_textSize" android:textColor="@color/hw_dullBlack" android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hw_changePassword_title" />
        <FrameLayout android:id="@id/fl_back" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="@dimen/hw_header_back_width" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="center" android:background="@drawable/hw_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/hw_des_back" />
            <requestFocus />
        </FrameLayout>
    </FrameLayout>
    <TextView android:background="@color/hw_divider_bg" android:layout_width="fill_parent" android:layout_height="@dimen/hw_divider_size" android:layout_marginBottom="@dimen/hw_item_margin_topBottom" />
    <LinearLayout android:orientation="horizontal" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="@dimen/hw_inputBox_height" android:layout_marginTop="@dimen/hw_item_margin_topBottom">
        <TextView android:textSize="@dimen/hw_item_textSize" android:textColor="@color/hw_dullBlack" android:gravity="center" android:padding="@dimen/hw_item_padding" android:layout_width="@dimen/hw_changePassword_item_left_width" android:layout_height="fill_parent" android:text="@string/hw_changePassword_oldPassword" />
        <EditText android:textSize="@dimen/hw_item_textSize" android:id="@id/et_old_pw" android:background="@null" android:padding="@dimen/hw_item_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/hw_changePassword_oldPassword_hint" android:ems="10" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionNext" android:nextFocusForward="@id/et_new_pw" />
        <ImageView android:layout_gravity="center" android:id="@id/iv_password_eye_old" android:background="@drawable/hw_eye_close" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="@dimen/hw_inputBox_height" android:layout_marginTop="@dimen/hw_item_margin_topBottom">
        <TextView android:textSize="@dimen/hw_item_textSize" android:textColor="@color/hw_dullBlack" android:gravity="center" android:padding="@dimen/hw_item_padding" android:layout_width="@dimen/hw_changePassword_item_left_width" android:layout_height="fill_parent" android:text="@string/hw_changePassword_newPassword" />
        <EditText android:textSize="@dimen/hw_item_textSize" android:id="@id/et_new_pw" android:background="@null" android:padding="@dimen/hw_item_padding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/hw_changePassword_newPassword_hint" android:ems="10" android:layout_weight="1.0" android:inputType="textPassword" android:imeOptions="actionDone" />
        <ImageView android:layout_gravity="center" android:id="@id/iv_password_eye_new" android:background="@drawable/hw_eye_close" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" />
    </LinearLayout>
    <TextView android:textSize="@dimen/hw_item_textSize" android:textColor="@android:color/white" android:gravity="center" android:id="@id/bt_submit" android:background="@drawable/hw_button_coloured_bg_selector" android:padding="@dimen/hw_item_padding" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_margin="@dimen/hw_changePassword_submit_margin" android:text="@string/hw_changePassword_submit" />
</LinearLayout>