<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:background="@drawable/bg_register_hw" android:layout_width="@dimen/hw_dialog_width" android:layout_height="wrap_content" android:layout_margin="@dimen/hw_dialog_marginParent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/qg_view_login_content" android:layout_width="@dimen/qg_normal_fg_w" android:layout_height="wrap_content" android:layout_margin="@dimen/hw_dialog_marginParent">
        <TextView android:textSize="@dimen/hw_dialog_title_textSize" android:textColor="@color/hw_dialog_title_textColor" android:gravity="center" android:layout_gravity="center" android:id="@id/qg_title_bar" android:layout_width="@dimen/qg_fg_titlebar_w" android:layout_height="@dimen/qg_fg_titlebar_h" android:text="@string/hw_update_title" />
        <TextView android:textSize="@dimen/qg_normal_txt_size" android:textColor="@color/qg_txt_sub_gray" android:gravity="center_vertical" android:id="@id/qg_txt_new_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/qg_normal_fg_content_margin_l" android:layout_marginTop="@dimen/qg_normal_fg_content_margin_t" android:layout_marginRight="@dimen/qg_normal_fg_content_margin_r" android:text="@string/hw_update_new_version" />
        <TextView android:textSize="@dimen/qg_normal_txt_size" android:textColor="@color/qg_txt_sub_gray" android:gravity="center_vertical" android:id="@id/qg_txt_cur_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/qg_normal_fg_content_margin_l" android:layout_marginTop="@dimen/qg_wigit_margin" android:layout_marginRight="@dimen/qg_normal_fg_content_margin_r" android:layout_marginBottom="@dimen/qg_normal_fg_content_margin_t" android:text="@string/hw_update_current_version" />
        <TextView android:textSize="@dimen/qg_normal_txt_size" android:textColor="@color/hw_dialog_content_textColor" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/qg_normal_fg_content_margin_l" android:layout_marginRight="@dimen/qg_normal_fg_content_margin_r" android:text="@string/hw_update_des" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/qg_normal_fg_content_margin_t">
            <Button android:textSize="@dimen/qg_normal_txt_size" android:textColor="@color/hw_dialog_content_textColor_b" android:gravity="center" android:id="@id/qg_btn_update_later" android:background="@drawable/hw_button_colourless_bg_selector" android:paddingTop="@dimen/qg_wait_txt_margin_l" android:paddingBottom="@dimen/qg_wait_txt_margin_l" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginRight="10.0dip" android:text="@string/hw_update_later" android:layout_weight="1.0" />
            <Button android:textSize="@dimen/qg_normal_txt_size" android:textColor="@color/hw_dialog_content_textColor_a" android:gravity="center" android:id="@id/qg_btn_update_now" android:background="@drawable/hw_button_coloured_bg_selector" android:paddingTop="@dimen/qg_wait_txt_margin_l" android:paddingBottom="@dimen/qg_wait_txt_margin_l" android:layout_width="fill_parent" android:layout_height="@dimen/hw_dialog_button_height" android:layout_marginLeft="10.0dip" android:text="@string/hw_update_update_now" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>